Fix single-item playlist rendering glitch on Firefox

--- a/www/css/cytube.css
+++ b/www/css/cytube.css
@@ -154,7 +154,7 @@
     list-style: none outside none;
     margin-left: 0;
     max-height: 500px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 
